syntax = "proto3";

import "maths.proto";

package messages;

message LayoutList {
	repeated string layoutName = 10;
}

message LayoutName {
	string name 			   = 10;
}

message Device {
	string name 			= 10;
	string uid 				= 20;
	double horizontalFOV 	= 30;
	double minDistance 		= 40;
	double maxDistance 		= 50;
	vec3 position 			= 60;
	vec3 orientation 		= 70;
}

message Screen {
	string name				= 10;
	string uid				= 20;
	vec3 position			= 30;
	vec3 orientation 		= 40;
	vec2 size				= 50;
}

message Layout {
	string name				= 10;
	repeated Device devices	= 20;
	repeated Screen screens	= 30;
}

